kubernetes/longhorn/base/network-policy/share-manager-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: share-manager
  namespace: longhorn-system
  labels:
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/instance: longhorn
spec:
  podSelector:
    matchLabels:
      longhorn.io/component: share-manager
      longhorn.io/managed-by: longhorn-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 2049
        - protocol: TCP
          port: 9600
